Fix JS cookie access failing or hanging after network process crashes.

Bug: 887680
Change-Id: I249e640a559e550b879370f2f02d2437e52ac93b
Reviewed-on: https://chromium-review.googlesource.com/1236282
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Chong Zhang <chongz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593038}
Former-commit-id: 1f61a5fd79eabc30a40d45cb9c524be7d751f6d2